Leave Room fixes and overflow fixes

--- a/koordapp/main_app/static/css/change_roomdata/change_roomdata.css
+++ b/koordapp/main_app/static/css/change_roomdata/change_roomdata.css
@@ -19,6 +19,8 @@
     padding-left: 20px;
     color: var(--font_color);
     justify-self: center;
+    white-space: nowrap;
+    overflow-x: auto;
 }
 /* Style of change button*/
 .change_button{
@@ -53,6 +55,7 @@
     padding-left: 20px;
     color: var(--font_color);
     justify-self: center;
+    overflow-x: auto;
 }
 /* Style of Dropdown Select */
 select {
