--- a/koordapp/main_app/static/css/leave_room/leave_room.css
+++ b/koordapp/main_app/static/css/leave_room/leave_room.css
@@ -1,29 +1,42 @@
 .button_container_row {
-  padding: 2vw 2vw 2vw 2vw;
-  /*width: 100%;*/
+  padding: 2vw 0vw 2vw 0vw;
+  width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  flex-wrap: wrap;
-  row-gap: 1vh;
+/*  row-gap: 1vh;
   column-gap: 1vh;
+  flex-wrap: wrap;
+  */
+
 }
+
+#tabletbody{
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+.mid_container{
+
+  width: 100%;
+}
+
+
 .button_container_row > * {
   flex: 0 1 min(40%, 30vh); /* This line ensures that each item will take up at least 50% of the container's width */
 }
 .button_container_icon {
   padding: 2vw 2vw 2vw 2vw;
-  height: 27vh;
-  width: 20vw;
-  border: 5px solid hsl(0, 0%, 0%);
+  height: 24vh;
+  width: 6vw;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   border-radius: 18px;
 }
 #icon_button_style img {
-  height: 25vh;
+  height: 22vh;
   width: auto;
 }
 #icon_button_style img,
@@ -42,24 +55,29 @@
 
 #leave_room_button {
   background-color: var(--color_icon_door);
+  box-shadow: 0px 8px 15px var(--color_icon_door);
 }
 #leave_room_button:hover {
   background-color: var(--color_icon_door2);
 }
 #toilet_button {
   background-color: var(--color_icon_toilet);
+  box-shadow: 0px 8px 15px var(--color_icon_toilet);
 }
 #toilet_button:hover {
   background-color: var(--color_icon_toilet2);
 }
 #school_yard_button {
   background-color: var(--color_icon_school_yard);
+  box-shadow: 0px 8px 15px var(--color_icon_school_yard);
 }
 #school_yard_button:hover {
   background-color: var(--color_icon_school_yard2);
 }
 #leave_school_button {
   background-color: var(--color_icon_leave_school);
+  box-shadow: 0px 8px 15px var(--color_icon_leave_school);
+
 }
 #leave_school_button:hover {
   background-color: var(--color_icon_leave_school2);
@@ -75,8 +93,6 @@
   right: 0;
   position: absolute;
   margin-right: 11vw;
-}
-.mid_container {
 }
 
 .default_heading_mid {
